--- a/QueryIT/CoreModulForm/Chunk.resx
+++ b/QueryIT/CoreModulForm/Chunk.resx
@@ -204,8 +204,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADk
-        GAAAAk1TRnQBSQFMAgEBDwEAAagBAQGoAQEBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAe
+        GQAAAk1TRnQBSQFMAgEBDwEAAbgBAQG4AQEBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAAUADAAEBAQABCAYAARAYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -259,59 +259,60 @@
         AbwBAA5zAXIGAAGZAXkBegJZAVIBMQFSAXoBeQGZAgABFAH/BPQC8wPsARQEAAG8AXgBGwGZAXgCcwF4
         AZkBGwF4AfACAAFyDZkBcgYAAf8BUgEaAaADegGgARoBUgH/AgABFAH/BewB8wPsBgABvAFzAZkBCAIb
         AQgBmQFzAQgDAAFzDZkBcwcAAfMBUgF5ARoB9gEaAXkBUgHzAwABFAT/A/QC7AgAAf8BGwEHAngBmQHw
-        Af8EAAEIDXMBCAgAAf8BmQFSATEBUgGZAf8EAAkUCQABHAJzA0sBUQF0JAABBwOGAQcB7wMoAe8BkwMf
-        AZMEAAFzAXQBeQGZAZoBegFSATEBUQFLFQAB9wtmAgABhgOtAYYBKANQASgBHwMlAR8DAAFzAVgBegGa
-        AaABmgF6AVkBMgIxAUoUAAH3Af8C8gHxAt0ECQFmAgABhgOtAYYBSQNQAUkB6QNGAekDAAFzAVkBegGa
-        AaABmgF6AVkBMgIxAUoEAAH3C2YEAAH3A/8E7AH/ARkBCQFmAgABiwOtAYsBSQNQAUkBHwNGAR8DAAFz
-        AVkBegGaAaABmgF6AVkBMgIxAUsEAAHvAf8C8gHxAfABvAMJAbUBZgQAAfcE/wP0Af8BGQEJAWYCAAGL
-        A60BiwFKA1EBSgEfA0wBHwMAAXMBWQF6AZoBoAGaAXoBWQEyAjEBSwQAAe8B/wG8AQcBuwH0AbsCtQEZ
-        AbUBZgQAAfcD/wTsAv8B3QFmAgABiwOtAYsBSgNzAUoB6QNMAekDAAFzAVkBegGaAaABmgF6AVkBMgIx
-        AUsEAAG7BP8C9AMZAbUBZgQAAbUI/wH0Ad0BZgIAAYsDswGLAVADeAFQAekDTAHpAwABcwFZAXoBmgGg
-        AZoBegFZATICMQFLBAABuwH/A7wB/wO7ARkBuwFmBAAB7wP/BOwB/wH0AfEBZgIAAYsDswGLAVADeAFQ
-        AekDTQHpAwABcwFZAXoBmgGgAZoBegFZATICMQFLBAABuwb/AvQBGQEHAWYEAAG1Cf8B8gFmAgABiwO0
-        AYsBUAN4AVAB6QOaAekDAAFzAVkBegGaAaABmgF6AVkBMgIxAUsEAAG7Af8DvAH/AbwBBwG7AfQBBwFm
-        BAABuwP/BOwC/wHyAWYCAAGLA7QBiwFQA5kBUAGTAyABkwMAAXQBWQF6AZoBoAGaAXoBWQEyAjEBSwQA
-        AbsH/wL0ARkBZgQAAbsK/wFmAgABzwO0Ac8BcgOZAXIIAAF0AVkBegGaAaABmgF6AVkBMgIxAW4EAAPW
-        AtUCtAWtBAAD1gG1BLQBzwOtAgABzwO0Ac8BcwMbAXMIAAF0AXoBoATDAaABmgF6AVgBbgQAAdYBCQTc
-        AdYE1QGtBAAB1gIJAtwB1gXVAa0CAAHPA7QBzwEIA3MBCAgAAXQKwwFuBAAF1gHVA7QDrQQAA9YBtQS0
-        Ac8DrQIAAc8DtAHPDgACmQIaAsMCGgGZARwjAAG0A90BtA8AApkBHAF0AXMBdAEcAZkkAAEJA7QBCQ8A
-        ARwCcwNLAVEBdAgAAZgCcgJQAk8BlwgAAZMCbgRFAW8IAAEcAnMHGQUAAXMBdAF5AZkBmgF6AVIBMQFR
-        AUsGAAFyApcBmAGeAeQBVQE0Ak8GAAFuAW8BdAGTAZQB4wFGASUCRQYAAXMBdAF5AZkBGQH/AwAB/wEZ
-        BAABcwFYAXoBmgGgAZoBegFZATICMQFKBAABcgFVAeQDngHkAVoB+gIzAUkEAAFuAUwBdQGUAZoBlAHj
-        AUcBJgIlAUQEAAFzAVgBegGaAaABGQX/ARkEAAFzAVkBHAJzA0sBUQF0ATEBSgQAAXIBWgGYAnICUAJP
-        AZcBMwFJBAABbgEXAZMCbgRFAW8BJQFEBAABcwFZAXoBmgGgARkB/wMAAf8BGQQAAnMBdAF5AZkBmgF6
-        AVIBMQFRAksEAAJyApcBmAGeAeQBVQE0Ak8BUAQAAm4BbwF0AZMBlAHjAUYBJQNFBAABcwFZAXoBmgGg
-        ARkF/wEZBAABcwFYAXoBmgGgAZoBegFZATICMQFKBAABcgFVAeQDngHkAVoB+gIzAUkEAAFuAUwBdQGU
-        AZoBlAHjAUcBJgIlAUQEAAFzAVkBegGaAaABGQH/AwAB/wEZBAABcwFZARwCcwNLAVEBdAExAUoEAAFy
-        AVoBmAJyAlACTwGXATMBSQQAAW4BFwGTAm4ERQFvASUBRAQAAXMBWQF6AZoBoAEZBP8CCQQAAnMBdAF5
-        AZkBmgF6AVIBMQFRAksEAAJyApcBmAGeAeQBVQE0Ak8BUAQAAm4BbwF0AZMBlAHjAUYBJQNFBAABcwFZ
-        AXoBmgGgAfQD/wEJAbQBSwQAAXMBWAF6AZoBoAGaAXoBWQEyAjEBSgQAAXIBVQHkA54B5AFaAfoCMwFJ
-        BAABbgFMAXUBlAGaAZQB4wFHASYCJQFEBAABcwFZAXoBmgGgBBkBCQExAUsEAAFzAVkBHAJzA0sBUQF0
-        ATEBSgQAAXIBWgGYAnICUAJPAZcBMwFJBAABbgEXAZMCbgRFAW8BJQFEBAABcwFZAXoBmgGgAZoBegFZ
-        ATICMQFLBAABdAFzAXQBeQGZAZoBegFSATEBUQJLBAABlwFyApcBmAGeAeQBVQE0Ak8BUAQAAW8BbgFv
-        AXQBkwGUAeMBRgElA0UEAAF0AVkBegGaAaABmgF6AVkBMgIxAUsEAAFzAVgBegGaAaABmgF6AVkBMgIx
-        AUoEAAFyAVUB5AOeAeQBWgH6AjMBSQQAAW4BTAF1AZQBmgGUAeMBRwEmAiUBRAQAAXQBWQF6AZoBoAGa
-        AXoBWQEyAjEBbgQAAXMBWQF6AZoBoAGaAXoBWQEyAjEBSgQAAXIBWgHkA54B5AFaAfoCMwFJBAABbgEX
-        ARYBlAGaAZQB4wFHASYCJQFEBAABdAF6AaAEwwGgAZoBegFYAW4EAAF0CsMBbgQAAZcKwgFyBAABbwoa
-        AW4EAAF0CsMBbgUAApkCGgLDAhoBmQEcBgACmAEIBMIBCAGYAZcGAAKTAZoBGgK9ARoBmQGTAXQGAAKZ
-        AhoCwwIaAZkBHAcAApkBHAF0AXMBdAEcAZkIAAKYApcBcgGXApgIAAKTAXQBbwFuAW8CkwgAApkBHAF0
-        AXMBdAEcAZkEAAFCAU0BPgcAAT4DAAEoAwABQAMAAUADAAEBAQABAQYAAQIWAAP/AQABwAEDAv8BwAEB
-        AgABwAEDAcABAQHAAQECAAHAAQMBwAEBAcABAQIAAcABAwGAAQEBwAEBAgABwAEDAcABAQHAAQECAAHA
+        Af8EAAEIDXMBCAgAAf8BmQFSATEBUgGZAf8EAAkUCQABHAJzA0sBUQF0BQANFAMADRQCAAEHA4YBBwHv
+        AygB7wGTAx8BkwQAAXMBdAF5AZkBmgF6AVIBMQFRAUsEAAEUAvcB7AKSAewCkgHsApIBFAMAARQC7wHs
+        ApIB7AXvARQCAAGGA60BhgEoA1ABKAEfAyUBHwMAAXMBWAF6AZoBoAGaAXoBWQEyAjEBSgMAARQC8AHs
+        AvAB7ALwAewC8AEUAwABFALxAewC8AHsBfEBFAIAAYYDrQGGAUkDUAFJAekDRgHpAwABcwFZAXoBmgGg
+        AZoBegFZATICMQFKAwABFAvsARQDAAEUAvIE7AXyARQCAAGLA60BiwFJA1ABSQEfA0YBHwMAAXMBWQF6
+        AZoBoAGaAXoBWQEyAjEBSwMAARQC8AHsAvAB7ALwAewC8AEUAwABFALyAewC8AHsBfIBFAIAAYsDrQGL
+        AUoDUQFKAR8DTAEfAwABcwFZAXoBmgGgAZoBegFZATICMQFLAwABFAvsARQDAAEUAvIE7AXyARQCAAGL
+        A60BiwFKA3MBSgHpA0wB6QMAAXMBWQF6AZoBoAGaAXoBWQEyAjEBSwMAARQC8QHsAvEB7ALxAewC8QEU
+        AwABFALzAewC8QHsBfMBFAIAAYsDswGLAVADeAFQAekDTAHpAwABcwFZAXoBmgGgAZoBegFZATICMQFL
+        AwABFAvsARQDAAEUAvME7AXzARQCAAGLA7MBiwFQA3gBUAHpA00B6QMAAXMBWQF6AZoBoAGaAXoBWQEy
+        AjEBSwMAARQC8gHsAvIB7ALyAewC8gEUAwABFALzAewC8gHsBfMBFAIAAYsDtAGLAVADeAFQAekDmgHp
+        AwABcwFZAXoBmgGgAZoBegFZATICMQFLAwABFAvsARQDAAEUAvQE7AX0ARQCAAGLA7QBiwFQA5kBUAGT
+        AyABkwMAAXQBWQF6AZoBoAGaAXoBWQEyAjEBSwMAARQC8wHsAvMB7ALzAewC8gEUAwABFAL0AewC8wHs
+        BfQBFAIAAc8DtAHPAXIDmQFyCAABdAFZAXoBmgGgAZoBegFZATICMQFuAwABFAvsARQDAAEUAv8E7AX/
+        ARQCAAHPA7QBzwFzAxsBcwgAAXQBegGgBMMBoAGaAXoBWAFuAwABFAvzARQDAAEUAv8E8wX/ARQCAAHP
+        A7QBzwEIA3MBCAgAAXQKwwFuAwABFAv0ARQDAAEUAv8E9AX/ARQCAAHPA7QBzw4AApkCGgLDAhoBmQEc
+        BAANFAMADRQCAAG0A90BtA8AApkBHAF0AXMBdAEcAZkkAAEJA7QBCQ8AARwCcwNLAVEBdAgAAZgCcgJQ
+        Ak8BlwgAAZMCbgRFAW8IAAEcAnMHGQUAAXMBdAF5AZkBmgF6AVIBMQFRAUsGAAFyApcBmAGeAeQBVQE0
+        Ak8GAAFuAW8BdAGTAZQB4wFGASUCRQYAAXMBdAF5AZkBGQH/AwAB/wEZBAABcwFYAXoBmgGgAZoBegFZ
+        ATICMQFKBAABcgFVAeQDngHkAVoB+gIzAUkEAAFuAUwBdQGUAZoBlAHjAUcBJgIlAUQEAAFzAVgBegGa
+        AaABGQX/ARkEAAFzAVkBHAJzA0sBUQF0ATEBSgQAAXIBWgGYAnICUAJPAZcBMwFJBAABbgEXAZMCbgRF
+        AW8BJQFEBAABcwFZAXoBmgGgARkB/wMAAf8BGQQAAnMBdAF5AZkBmgF6AVIBMQFRAksEAAJyApcBmAGe
+        AeQBVQE0Ak8BUAQAAm4BbwF0AZMBlAHjAUYBJQNFBAABcwFZAXoBmgGgARkF/wEZBAABcwFYAXoBmgGg
+        AZoBegFZATICMQFKBAABcgFVAeQDngHkAVoB+gIzAUkEAAFuAUwBdQGUAZoBlAHjAUcBJgIlAUQEAAFz
+        AVkBegGaAaABGQH/AwAB/wEZBAABcwFZARwCcwNLAVEBdAExAUoEAAFyAVoBmAJyAlACTwGXATMBSQQA
+        AW4BFwGTAm4ERQFvASUBRAQAAXMBWQF6AZoBoAEZBP8CCQQAAnMBdAF5AZkBmgF6AVIBMQFRAksEAAJy
+        ApcBmAGeAeQBVQE0Ak8BUAQAAm4BbwF0AZMBlAHjAUYBJQNFBAABcwFZAXoBmgGgAfQD/wEJAbQBSwQA
+        AXMBWAF6AZoBoAGaAXoBWQEyAjEBSgQAAXIBVQHkA54B5AFaAfoCMwFJBAABbgFMAXUBlAGaAZQB4wFH
+        ASYCJQFEBAABcwFZAXoBmgGgBBkBCQExAUsEAAFzAVkBHAJzA0sBUQF0ATEBSgQAAXIBWgGYAnICUAJP
+        AZcBMwFJBAABbgEXAZMCbgRFAW8BJQFEBAABcwFZAXoBmgGgAZoBegFZATICMQFLBAABdAFzAXQBeQGZ
+        AZoBegFSATEBUQJLBAABlwFyApcBmAGeAeQBVQE0Ak8BUAQAAW8BbgFvAXQBkwGUAeMBRgElA0UEAAF0
+        AVkBegGaAaABmgF6AVkBMgIxAUsEAAFzAVgBegGaAaABmgF6AVkBMgIxAUoEAAFyAVUB5AOeAeQBWgH6
+        AjMBSQQAAW4BTAF1AZQBmgGUAeMBRwEmAiUBRAQAAXQBWQF6AZoBoAGaAXoBWQEyAjEBbgQAAXMBWQF6
+        AZoBoAGaAXoBWQEyAjEBSgQAAXIBWgHkA54B5AFaAfoCMwFJBAABbgEXARYBlAGaAZQB4wFHASYCJQFE
+        BAABdAF6AaAEwwGgAZoBegFYAW4EAAF0CsMBbgQAAZcKwgFyBAABbwoaAW4EAAF0CsMBbgUAApkCGgLD
+        AhoBmQEcBgACmAEIBMIBCAGYAZcGAAKTAZoBGgK9ARoBmQGTAXQGAAKZAhoCwwIaAZkBHAcAApkBHAF0
+        AXMBdAEcAZkIAAKYApcBcgGXApgIAAKTAXQBbwFuAW8CkwgAApkBHAF0AXMBdAEcAZkEAAFCAU0BPgcA
+        AT4DAAEoAwABQAMAAUADAAEBAQABAQYAAQIWAAP/AQABwAEDAv8BwAEBAgABwAEDAcABAQHAAQECAAHA
         AQMBwAEBAcABAQIAAcABAwGAAQEBwAEBAgABwAEDAcABAQHAAQECAAHAAQMBwAEBAcABAQIAAcABAwGA
-        AQEBwAEBAgABwAEDAcABAQHAAQECAAHAAQMBwAEBAcABAQIAAcABAwGAAQEBwAEBAgABwAEHAcABAQHA
-        AQECAAHAAQ8BwAEBAf4BvwIAAcABHwL/Af4BPwIAAfABDwH4AX8BDwH/AcABAwHgAQcB+AEfAQMB/wHA
-        AQMBwAEDAQABAQEDAe8BwAEDAYABAQEAAQEBAAH+AcABAwMAAQEBgAHfAcABAwQAAcABAwHAAQMDAAEB
-        AeABAQHAAQMEAAHwAQABwAEDBAAB+AEAAcABAwQAAfgBAAHAAQMDAAEBAfgBAAHAAQMDAAEBAfABAAHA
-        AQMBgAEBAQABAQH4AQABwAEDAcABAwEAAQEB+AEAAcABBwHgAQcBAAEBAfwBAQHAAQ8B8AEPAQABAQH+
-        AQMBwAEfAfABDwT/AQABAQHgAQcC/wHAAQMBAAEBAcABAwL/AcABAwEAAQEBwAEDAcABAwHAAQMBAAEB
-        AcABAwHAAQMBwAEDAQABAQHAAQMBwAEDAcABAwEAAQEBwAEDAcABAwHAAQMBAAEBAcABAwHAAQMBwAED
-        AQABAQHAAQMBwAEDAcABAwEAAQEBwAEDAcABAwHAAQMBAAEBAcABAwHAAQMBwAEDAQABPwHAAQMBwAED
-        AcABAwEAAT8BwAEDAcABAwHAAQMBAAE/AcABAwHAAQMBwAEDAQcB/wHgAQcE/wEHAf8B8AEPBP8BBwH/
-        AfABDwHwAQ8B8AEPAfABAwHgAQcB4AEHAeABBwHgAQMBwAEDAcABAwHAAQMBwAEDAcABAwHAAQMBwAED
-        AcABAwHAAQMBwAEDAcABAwHAAQMBwAEDAcABAwHAAQMBwAEDAcABAwHAAQMBwAEDAcABAwHAAQMBwAED
-        AcABAwHAAQMBwAEDAcABAwHAAQMBwAEDAcABAwHAAQMBwAEDAcABAwHAAQMBwAEDAcABAwHAAQMBwAED
-        AcABAwHAAQMBwAEDAcABAwHAAQMBwAEDAcABAwHAAQMBwAEDAcABAwHAAQMB4AEHAeABBwHgAQcB4AEH
-        AfABDwHwAQ8B8AEPAfABDws=
+        AQEBwAEBAgABwAEDAcABAQHAAQECAAHAAQMBwAEBAcABAQIAAcABAwGAAQEBwAEBAgABwAEDAcABAQHA
+        AQECAAHAAQMBwAEBAcABAQIAAcABAwGAAQEBwAEBAgABwAEHAcABAQHAAQECAAHAAQ8BwAEBAf4BvwIA
+        AcABHwL/Af4BPwIAAfABDwH4AX8BDwH/AcABAwHgAQcB+AEfAQMB/wHAAQMBwAEDAQABAQEDAe8BwAED
+        AYABAQEAAQEBAAH+AcABAwMAAQEBgAHfAcABAwQAAcABAwHAAQMDAAEBAeABAQHAAQMEAAHwAQABwAED
+        BAAB+AEAAcABAwQAAfgBAAHAAQMDAAEBAfgBAAHAAQMDAAEBAfABAAHAAQMBgAEBAQABAQH4AQABwAED
+        AcABAwEAAQEB+AEAAcABBwHgAQcBAAEBAfwBAQHAAQ8B8AEPAQABAQH+AQMBwAEfAfABDwGAAQMBgAED
+        AQABAQHgAQcBgAEDAYABAwEAAQEBwAEDAYABAwGAAQMBAAEBAcABAwGAAQMBgAEDAQABAQHAAQMBgAED
+        AYABAwEAAQEBwAEDAYABAwGAAQMBAAEBAcABAwGAAQMBgAEDAQABAQHAAQMBgAEDAYABAwEAAQEBwAED
+        AYABAwGAAQMBAAEBAcABAwGAAQMBgAEDAQABAQHAAQMBgAEDAYABAwEAAT8BwAEDAYABAwGAAQMBAAE/
+        AcABAwGAAQMBgAEDAQABPwHAAQMBgAEDAYABAwEHAf8B4AEHAYABAwGAAQMBBwH/AfABDwT/AQcB/wHw
+        AQ8B8AEPAfABDwHwAQMB4AEHAeABBwHgAQcB4AEDAcABAwHAAQMBwAEDAcABAwHAAQMBwAEDAcABAwHA
+        AQMBwAEDAcABAwHAAQMBwAEDAcABAwHAAQMBwAEDAcABAwHAAQMBwAEDAcABAwHAAQMBwAEDAcABAwHA
+        AQMBwAEDAcABAwHAAQMBwAEDAcABAwHAAQMBwAEDAcABAwHAAQMBwAEDAcABAwHAAQMBwAEDAcABAwHA
+        AQMBwAEDAcABAwHAAQMBwAEDAcABAwHAAQMBwAEDAcABAwHAAQMBwAEDAeABBwHgAQcB4AEHAeABBwHw
+        AQ8B8AEPAfABDwHwAQ8L
 </value>
   </data>
 </root>
