--- a/QueryIT/Main.resx
+++ b/QueryIT/Main.resx
@@ -124,9 +124,9 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAA
-        EQAAAk1TRnQBSQFMAgEBCgEAASgBAQEoAQEBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABQAMAATADAAEBAQABCAYAAQwYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADU
+        EgAAAk1TRnQBSQFMAgEBDAEAAUABAQFAAQEBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAAUADAAEBAQABCAYAARAYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
         AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
@@ -153,51 +153,59 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/xMADBQkAA0UAwABFALv
-        BPcDkgHtARQkAAEUC/8BFAMAARQD8QTwA7wBFCMABOwJ/wEUAwABFAHyBPED8AK8ARQkAAEUC/8BFAMA
-        ARQC8gTxBPABFCQAARQL/wEUAwABFAPyBPED8AEUIwAE7An/ARQDAAEUAfME8gPxAvABFCQAARQL/wEU
-        AwABFALzBPIE8QEUJAABFAv/ARQDAAEUBPMD8gPxARQjAATsAf8G7AL/ARQDAAEUAfQE8wTyAfEBFCQA
-        ARQD/wbsAv8BFAMAARQC9ATzBPIBFCQAARQD/wbsAv8BFAMAARQE9APzA/IBFCMABOwB/wbsAv8BFAMA
-        ARQB/wT0AvMD7AEUJAABFAv/ARQDAAEUA/8D9AHzA+wlAA0UAwABFAT/A/QC7DYACRQmAAIUCewEFAIA
-        DRQDAAwUEgADFALsARQG7AQUAgABFAv/ARQDAAEUAu8E9wOSAe0BFAMAAewNFAEAAxQC7AEUBuwEFAIA
-        ARQL/wEUAwABFAPxBPADvAEUAwAB7APwAe8C9wHsAfcB7wMHARQBAAMUAuwBFAbsBBQCAAEUBP8C7AX/
-        ARQDAAEUAfII7AG8ARQDAAHsAfABvAHvAe0CkgHvBfABFAEAAxQJ7AQUAgABFAP/BOwE/wEUAwABFALy
-        BPEE8AEUAwAB7AG8Ae8B9wG8AQcBkgbwARQBABAUAgABFAL/AuwC/wLsA/8BFAMAARQB8gjsAfABFAMA
-        AewBBwGSAgcB7QEHBvEBFAEAEBQCAAEUB/8C7AL/ARQDAAEUAfME8gPxAvABFAMAAewB7wEHAu8BkgHw
-        BvEBFAEAEBQCAAEUCP8C7AH/ARQDAAEUAfMI7AHxARQDAAHsAQcB8QryARQBABAUAgABFAv/ARQDAAEU
-        BPMD8gPxARQDAAHsAbwL8gEUAQACFAz/AhQCAAEUC/8BFAMAARQB9AjsAfEBFAMAAewB8QvyARQBAAIU
-        DP8CFAIAARQL/wEUAwABFAL0BPME8gEUAwAB7AHyC/MBFAEAAhQE/wYUAfMB/wIUAgABFAL/BxQC/wEU
-        AwABFAH0BewB8wPyARQDAAHsAfML9AEUAQACFAz/AhQCAAEUAv8BFAX/ARQC/wEUAwABFAH/BPQC8wPs
-        ARQDAAHsDPQBFAEAAhQB/wH2CBQB9gH/AhQCAA0UAwABFAH/BewB8wPsBAAB7Az/ARQBAAIUDP8CFAcA
-        ARQBAAEUCAABFAT/A/QC7AUADuwBABAUBwADFAgACRQZAAEcAnMDSwFRAXQIAAGYAnICUAJPAZcIAAGT
-        Am4ERQFvFwABcwF0AXkBmQGaAXoBUgExAVEBSwYAAXIClwGYAZ4B5AFVATQCTwYAAW4BbwF0AZMBlAHj
-        AUYBJQJFFQABcwFYAXoBmgGgAZoBegFZATICMQFKBAABcgFVAeQDngHkAVoB+gIzAUkEAAFuAUwBdQGU
-        AZoBlAHjAUcBJgIlAUQDAA0UBAABcwFZARwCcwNLAVEBdAExAUoEAAFyAVoBmAJyAlACTwGXATMBSQQA
-        AW4BFwGTAm4ERQFvASUBRAIAAhQMBwEUAwACcwF0AXkBmQGaAXoBUgExAVECSwQAAnIClwGYAZ4B5AFV
-        ATQCTwFQBAACbgFvAXQBkwGUAeMBRgElA0UCAAIUDAcBFAMAAXMBWAF6AZoBoAGaAXoBWQEyAjEBSgQA
-        AXIBVQHkA54B5AFaAfoCMwFJBAABbgFMAXUBlAGaAZQB4wFHASYCJQFEAgADFAsHARQDAAFzAVkBHAJz
-        A0sBUQF0ATEBSgQAAXIBWgGYAnICUAJPAZcBMwFJBAABbgEXAZMCbgRFAW8BJQFEAgABFAHsARQMBwEU
-        AgACcwF0AXkBmQGaAXoBUgExAVECSwQAAnIClwGYAZ4B5AFVATQCTwFQBAACbgFvAXQBkwGUAeMBRgEl
-        A0UCAAEUAewBFAwHARQCAAFzAVgBegGaAaABmgF6AVkBMgIxAUoEAAFyAVUB5AOeAeQBWgH6AjMBSQQA
-        AW4BTAF1AZQBmgGUAeMBRwEmAiUBRAIAARQB7AEUDAcBFAIAAXMBWQEcAnMDSwFRAXQBMQFKBAABcgFa
-        AZgCcgJQAk8BlwEzAUkEAAFuARcBkwJuBEUBbwElAUQCAAEUAewOFAIAAXQBcwF0AXkBmQGaAXoBUgEx
-        AVECSwQAAZcBcgKXAZgBngHkAVUBNAJPAVAEAAFvAW4BbwF0AZMBlAHjAUYBJQNFAgABFA3sARQDAAFz
-        AVgBegGaAaABmgF6AVkBMgIxAUoEAAFyAVUB5AOeAeQBWgH6AjMBSQQAAW4BTAF1AZQBmgGUAeMBRwEm
-        AiUBRAIAARQM7AEUBAABcwFZAXoBmgGgAZoBegFZATICMQFKBAABcgFaAeQDngHkAVoB+gIzAUkEAAFu
-        ARcBFgGUAZoBlAHjAUcBJgIlAUQCAAEUBuwGFAUAAXQKwwFuBAABlwrCAXIEAAFvChoBbgMAARQE7AEU
-        DAACmQIaAsMCGgGZARwGAAKYAQgEwgEIAZgBlwYAApMBmgEaAr0BGgGZAZMBdAUABBQOAAKZARwBdAFz
-        AXQBHAGZCAACmAKXAXIBlwKYCAACkwF0AW8BbgFvApMUAAFCAU0BPgcAAT4DAAEoAwABQAMAATADAAEB
-        AQABAQUAAYABARYAA/8BAAL/AcABAwQAAcABAQHAAQMEAAHAAQEBwAEDBAABgAEBAcABAwQAAcABAQHA
-        AQMEAAHAAQEBwAEDBAABgAEBAcABAwQAAcABAQHAAQMEAAHAAQEBwAEDBAABgAEBAcABAwQAAcABAQHA
-        AQMEAAHAAQEBwAEDBAABgAEBAcABAwQAAcABAQHAAQcEAAHAAQEBwAEPBAAC/wHAAR8EAAGAAQABwAEB
-        AcABAwL/AgABwAEBAcABAwGAAQECAAHAAQEBwAEDAYABAQIAAcABAQHAAQMBgAEBAgABwAEBAcABAwGA
-        AQECAAHAAQEBwAEDAYABAQIAAcABAQHAAQMBgAEBAgABwAEBAcABAwGAAQECAAHAAQEBwAEDAYABAQIA
-        AcABAQHAAQMBgAEBAgABwAEBAcABAwGAAQECAAHAAQEBwAEDAYABAQIAAcABAQHAAQMBgAEBAgABwAEB
-        AcABBwGAAQECAAH+Ab8BwAEPAYABAQIAAf4BPwHAAR8C/wHwAQ8B8AEPAfABDwL/AeABBwHgAQcB4AEH
-        Av8BwAEDAcABAwHAAQMBgAEDAcABAwHAAQMBwAEDAQABAQHAAQMBwAEDAcABAwEAAQEBwAEDAcABAwHA
-        AQMBAAEBAcABAwHAAQMBwAEDAgABwAEDAcABAwHAAQMCAAHAAQMBwAEDAcABAwIAAcABAwHAAQMBwAED
-        AgABwAEDAcABAwHAAQMBAAEBAcABAwHAAQMBwAEDAQABAwHAAQMBwAEDAcABAwEAAQcBwAEDAcABAwHA
-        AQMBgQH/AeABBwHgAQcB4AEHAcMB/wHwAQ8B8AEPAfABDwL/Cw==
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8AFwAMFAMA
+        DRQDAA0UBAANFAMAARQC7wT3A5IB7QEUAwABFAL3AewCkgHsApIB7AKSARQDAAEUAu8B7AKSAewF7wEU
+        BAABFAv/ARQDAAEUA/EE8AO8ARQDAAEUAvAB7ALwAewC8AHsAvABFAMAARQC8QHsAvAB7AXxARQDAATs
+        Cf8BFAMAARQB8gTxA/ACvAEUAwABFAvsARQDAAEUAvIE7AXyARQEAAEUC/8BFAMAARQC8gTxBPABFAMA
+        ARQC8AHsAvAB7ALwAewC8AEUAwABFALyAewC8AHsBfIBFAQAARQL/wEUAwABFAPyBPED8AEUAwABFAvs
+        ARQDAAEUAvIE7AXyARQDAATsCf8BFAMAARQB8wTyA/EC8AEUAwABFALxAewC8QHsAvEB7ALxARQDAAEU
+        AvMB7ALxAewF8wEUBAABFAv/ARQDAAEUAvME8gTxARQDAAEUC+wBFAMAARQC8wTsBfMBFAQAARQL/wEU
+        AwABFATzA/ID8QEUAwABFALyAewC8gHsAvIB7ALyARQDAAEUAvMB7ALyAewF8wEUAwAE7AH/BuwC/wEU
+        AwABFAH0BPME8gHxARQDAAEUC+wBFAMAARQC9ATsBfQBFAQAARQD/wbsAv8BFAMAARQC9ATzBPIBFAMA
+        ARQC8wHsAvMB7ALzAewC8gEUAwABFAL0AewC8wHsBfQBFAQAARQD/wbsAv8BFAMAARQE9APzA/IBFAMA
+        ARQL7AEUAwABFAL/BOwF/wEUAwAE7AH/BuwC/wEUAwABFAH/BPQC8wPsARQDAAEUC/MBFAMAARQC/wTz
+        Bf8BFAQAARQL/wEUAwABFAP/A/QB8wPsBAABFAv0ARQDAAEUAv8E9AX/ARQEAA0UAwABFAT/A/QC7AUA
+        DRQDAA0UFAAJFCYAAhQJ7AQUAgANFAMADBQSAAMUAuwBFAbsBBQCAAEUC/8BFAMAARQC7wT3A5IB7QEU
+        AwAB7A0UAQADFALsARQG7AQUAgABFAv/ARQDAAEUA/EE8AO8ARQDAAHsA/AB7wL3AewB9wHvAwcBFAEA
+        AxQC7AEUBuwEFAIAARQE/wLsBf8BFAMAARQB8gjsAbwBFAMAAewB8AG8Ae8B7QKSAe8F8AEUAQADFAns
+        BBQCAAEUA/8E7AT/ARQDAAEUAvIE8QTwARQDAAHsAbwB7wH3AbwBBwGSBvABFAEAEBQCAAEUAv8C7AL/
+        AuwD/wEUAwABFAHyCOwB8AEUAwAB7AEHAZICBwHtAQcG8QEUAQAQFAIAARQH/wLsAv8BFAMAARQB8wTy
+        A/EC8AEUAwAB7AHvAQcC7wGSAfAG8QEUAQAQFAIAARQI/wLsAf8BFAMAARQB8wjsAfEBFAMAAewBBwHx
+        CvIBFAEAEBQCAAEUC/8BFAMAARQE8wPyA/EBFAMAAewBvAvyARQBAAIUDP8CFAIAARQL/wEUAwABFAH0
+        COwB8QEUAwAB7AHxC/IBFAEAAhQM/wIUAgABFAv/ARQDAAEUAvQE8wTyARQDAAHsAfIL8wEUAQACFAT/
+        BhQB8wH/AhQCAAEUAv8HFAL/ARQDAAEUAfQF7AHzA/IBFAMAAewB8wv0ARQBAAIUDP8CFAIAARQC/wEU
+        Bf8BFAL/ARQDAAEUAf8E9ALzA+wBFAMAAewM9AEUAQACFAH/AfYIFAH2Af8CFAIADRQDAAEUAf8F7AHz
+        A+wEAAHsDP8BFAEAAhQM/wIUBwABFAEAARQIAAEUBP8D9ALsBQAO7AEAEBQHAAMUCAAJFBkAARwCcwNL
+        AVEBdAgAAZgCcgJQAk8BlwgAAZMCbgRFAW8XAAFzAXQBeQGZAZoBegFSATEBUQFLBgABcgKXAZgBngHk
+        AVUBNAJPBgABbgFvAXQBkwGUAeMBRgElAkUVAAFzAVgBegGaAaABmgF6AVkBMgIxAUoEAAFyAVUB5AOe
+        AeQBWgH6AjMBSQQAAW4BTAF1AZQBmgGUAeMBRwEmAiUBRAMADRQEAAFzAVkBHAJzA0sBUQF0ATEBSgQA
+        AXIBWgGYAnICUAJPAZcBMwFJBAABbgEXAZMCbgRFAW8BJQFEAgACFAwHARQDAAJzAXQBeQGZAZoBegFS
+        ATEBUQJLBAACcgKXAZgBngHkAVUBNAJPAVAEAAJuAW8BdAGTAZQB4wFGASUDRQIAAhQMBwEUAwABcwFY
+        AXoBmgGgAZoBegFZATICMQFKBAABcgFVAeQDngHkAVoB+gIzAUkEAAFuAUwBdQGUAZoBlAHjAUcBJgIl
+        AUQCAAMUCwcBFAMAAXMBWQEcAnMDSwFRAXQBMQFKBAABcgFaAZgCcgJQAk8BlwEzAUkEAAFuARcBkwJu
+        BEUBbwElAUQCAAEUAewBFAwHARQCAAJzAXQBeQGZAZoBegFSATEBUQJLBAACcgKXAZgBngHkAVUBNAJP
+        AVAEAAJuAW8BdAGTAZQB4wFGASUDRQIAARQB7AEUDAcBFAIAAXMBWAF6AZoBoAGaAXoBWQEyAjEBSgQA
+        AXIBVQHkA54B5AFaAfoCMwFJBAABbgFMAXUBlAGaAZQB4wFHASYCJQFEAgABFAHsARQMBwEUAgABcwFZ
+        ARwCcwNLAVEBdAExAUoEAAFyAVoBmAJyAlACTwGXATMBSQQAAW4BFwGTAm4ERQFvASUBRAIAARQB7A4U
+        AgABdAFzAXQBeQGZAZoBegFSATEBUQJLBAABlwFyApcBmAGeAeQBVQE0Ak8BUAQAAW8BbgFvAXQBkwGU
+        AeMBRgElA0UCAAEUDewBFAMAAXMBWAF6AZoBoAGaAXoBWQEyAjEBSgQAAXIBVQHkA54B5AFaAfoCMwFJ
+        BAABbgFMAXUBlAGaAZQB4wFHASYCJQFEAgABFAzsARQEAAFzAVkBegGaAaABmgF6AVkBMgIxAUoEAAFy
+        AVoB5AOeAeQBWgH6AjMBSQQAAW4BFwEWAZQBmgGUAeMBRwEmAiUBRAIAARQG7AYUBQABdArDAW4EAAGX
+        CsIBcgQAAW8KGgFuAwABFATsARQMAAKZAhoCwwIaAZkBHAYAApgBCATCAQgBmAGXBgACkwGaARoCvQEa
+        AZkBkwF0BQAEFA4AApkBHAF0AXMBdAEcAZkIAAKYApcBcgGXApgIAAKTAXQBbwFuAW8CkxQAAUIBTQE+
+        BwABPgMAASgDAAFAAwABQAMAAQEBAAEBBgABAhYAA/+BAAL/AcABAwGAAQMBgAEDAcABAQHAAQMBgAED
+        AYABAwHAAQEBwAEDAYABAwGAAQMBgAEBAcABAwGAAQMBgAEDAcABAQHAAQMBgAEDAYABAwHAAQEBwAED
+        AYABAwGAAQMBgAEBAcABAwGAAQMBgAEDAcABAQHAAQMBgAEDAYABAwHAAQEBwAEDAYABAwGAAQMBgAEB
+        AcABAwGAAQMBgAEDAcABAQHAAQMBgAEDAYABAwHAAQEBwAEDAYABAwGAAQMBgAEBAcABAwGAAQMBgAED
+        AcABAQHAAQcBgAEDAYABAwHAAQEBwAEPAYABAwGAAQMC/wHAAR8E/wGAAQABwAEBAcABAwL/AgABwAEB
+        AcABAwGAAQECAAHAAQEBwAEDAYABAQIAAcABAQHAAQMBgAEBAgABwAEBAcABAwGAAQECAAHAAQEBwAED
+        AYABAQIAAcABAQHAAQMBgAEBAgABwAEBAcABAwGAAQECAAHAAQEBwAEDAYABAQIAAcABAQHAAQMBgAEB
+        AgABwAEBAcABAwGAAQECAAHAAQEBwAEDAYABAQIAAcABAQHAAQMBgAEBAgABwAEBAcABBwGAAQECAAH+
+        Ab8BwAEPAYABAQIAAf4BPwHAAR8C/wHwAQ8B8AEPAfABDwL/AeABBwHgAQcB4AEHAv8BwAEDAcABAwHA
+        AQMBgAEDAcABAwHAAQMBwAEDAQABAQHAAQMBwAEDAcABAwEAAQEBwAEDAcABAwHAAQMBAAEBAcABAwHA
+        AQMBwAEDAgABwAEDAcABAwHAAQMCAAHAAQMBwAEDAcABAwIAAcABAwHAAQMBwAEDAgABwAEDAcABAwHA
+        AQMBAAEBAcABAwHAAQMBwAEDAQABAwHAAQMBwAEDAcABAwEAAQcBwAEDAcABAwHAAQMBgQH/AeABBwHg
+        AQcB4AEHAcMB/wHwAQ8B8AEPAfABDwL/Cw==
 </value>
   </data>
   <metadata name="MainStatus.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -332,6 +340,18 @@
         eE4+5fP1ffE5YFHXHaJEnBAgjoklokN2of0HPuNZTjlvd+QAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="convertToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAAABp0RVh0U29mdHdhcmUAUGFpbnQuTkVUIHYzLjUuMTAw9HKhAAABSUlEQVQ4T5WQ
+        26qCQBSGe7QerXfoLiSCMOjCFwmNMjM72NHKtPLYSYw/ZvY2ZsBhsy8+UFj/9681FQCUarWKvyhmWb4f
+        vwN4v9/IsgzP5xP3+x1pmiKOY9RqNQqZZeEEeZ5/B1mCIOD+iwyBE7xeLzweD9xuN9oahiENn89nTsCe
+        wwnIyuxgwel0wvF4xH6/x263EwuSJEEURbT1crnA930uvN1usV6vxQISLtuAxbZtseB6vdJWz/Pgui4O
+        hwNdebPZYLVa0fB8PhcLSLislcWyLLGAtJJ7Hcf53rtcLrFYLDCbzTCZTGCaplhAHqqslWU0GokFZfeS
+        lUmrYRjQdR2DwUAsICuXtbJomiYWFK3T6ZTeOx6P6crD4RD9fh+qqqLX64kFiqKg2+2i0+lAlmW02220
+        Wi00m01IkoRGo4F6vS4W/IefHCofp03e3XBoAhEAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="modulesToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
@@ -384,21 +404,6 @@
         dfHk15TbEAK6pFWrVSufyLNJkgT034Bt21gsFr+2cRUwlUrlNZt4zzYUAVMul0tEh3i7ZxtCwB95WHZr
         NhLeBvfeFDBFs5HboFqPe/8UMPnZ8DborE08cO+/AiY7G+KJfonGANC+ATnj5yDjsKjNAAAAAElFTkSu
         QmCC
-</value>
-  </data>
-  <data name="aboutToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
-        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAH6SURBVDhPlZDdS9NRHMbPv2CvJFpJGImJYpYiooUX
-        MzV1OBRDRirNN2jM6SxQl/mypc3h29jQ5da2nBeWk3Ti0EjMFxSdrKYzNi2W4VX/QU+/c4rwwp+0iw/P
-        A+d7PnzPIa8VyToOhIAuuG4nlANnFSGugQdwPLuDgEOCFb3wRHYnHmHFWgeL/Kbmn+CVLOmX26HC2pAI
-        b1vSMVwTz8vuvA6B6cdwqIQwSW9ImcAkTcRP7zgm1YXwWEtgkSUde5myv2TG3scRfJtrh1mWDGNtQgah
-        B4fLfeBWgr0xBd7R0mPXP4pvTAz/jBKGyjg70Uuu48eiFoerBtA+WBEbEqS/LAYHCxoG7dvjTfBxT9kZ
-        q+VP230E33ejV3wNRFt6FcH5LgbtVOA1FWF7tJo/zcXcPzyHpiQapKvoCr661AzaqcAzXIjPtir+NIqw
-        P6uCWhQF0im8jL2ZTgbtVODWF+CTRcKfBiECzg60518Eac2NhH+qjUE7FWwM3IPH/JA/B/Pgf9eGpzkR
-        IM1Z4fgy2cqgnQrWerOxNVLBn305bL5JcAHkSeb57y6NGL4JJbjOBKs9WXC/LOdP7d2/8+dAFLfPNiqz
-        L8Fta+A2iGCC5RcCbBrLT8ydNy1QZJwBAUDkaac/9JfdgrVewAT/izzt1B8BRZYa5uRAaITpfgNzjIsV
-        0+cqIAAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="licenseToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -480,6 +485,21 @@
         LzwpK9j09Kn6Lfiuk33gn27uof9YcfaB/6oBi76D1ML0wQ0AYVmLzmZ5277PysHLf6on7fyrmXngPwhr
         JO/8qxKy4qe83YQvQDVtyHpQDABhadM2GSBuAOILQPwJii8DcRsQK6Gq/88AADxXm/trcSMMAAAAAElF
         TkSuQmCC
+</value>
+  </data>
+  <data name="aboutToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAH6SURBVDhPlZDdS9NRHMbPv2CvJFpJGImJYpYiooUX
+        MzV1OBRDRirNN2jM6SxQl/mypc3h29jQ5da2nBeWk3Ti0EjMFxSdrKYzNi2W4VX/QU+/c4rwwp+0iw/P
+        A+d7PnzPIa8VyToOhIAuuG4nlANnFSGugQdwPLuDgEOCFb3wRHYnHmHFWgeL/Kbmn+CVLOmX26HC2pAI
+        b1vSMVwTz8vuvA6B6cdwqIQwSW9ImcAkTcRP7zgm1YXwWEtgkSUde5myv2TG3scRfJtrh1mWDGNtQgah
+        B4fLfeBWgr0xBd7R0mPXP4pvTAz/jBKGyjg70Uuu48eiFoerBtA+WBEbEqS/LAYHCxoG7dvjTfBxT9kZ
+        q+VP230E33ejV3wNRFt6FcH5LgbtVOA1FWF7tJo/zcXcPzyHpiQapKvoCr661AzaqcAzXIjPtir+NIqw
+        P6uCWhQF0im8jL2ZTgbtVODWF+CTRcKfBiECzg60518Eac2NhH+qjUE7FWwM3IPH/JA/B/Pgf9eGpzkR
+        IM1Z4fgy2cqgnQrWerOxNVLBn305bL5JcAHkSeb57y6NGL4JJbjOBKs9WXC/LOdP7d2/8+dAFLfPNiqz
+        L8Fta+A2iGCC5RcCbBrLT8ydNy1QZJwBAUDkaac/9JfdgrVewAT/izzt1B8BRZYa5uRAaITpfgNzjIsV
+        0+cqIAAAAABJRU5ErkJggg==
 </value>
   </data>
   <metadata name="statsTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
